added 4 new tasks to the menu app (assignment 1)

--- a/CS/Assignment 2 - Inheritance/Inheritance Example/Inheritance Example/Inheritance Example.csproj
+++ b/CS/Assignment 2 - Inheritance/Inheritance Example/Inheritance Example/Inheritance Example.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Subjects.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Janitor.cs" />
     <Compile Include="Teacher.cs" />
